Fix grid misalignment from arrow

--- a/web/components/Board.module.css
+++ b/web/components/Board.module.css
@@ -1,10 +1,26 @@
 .board {
     align-self: center;
-    margin: auto; /* Horizontally centered */
 }
 
 .arrow {
     color: royalblue;
     font-size: 2rem;
-    margin: 0;
+    margin-top: 0;
+    margin-left: 0;
+    margin-right: 0;
+    /* Fix vertical centering */
+    margin-bottom: 0.5rem;
+}
+
+.start {
+    color: royalblue;
+    text-transform: uppercase;
+    font-size: 1.2rem;
+}
+
+.outer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
 }
